Fix #16216: Align icons, no underline

--- a/src/app/components/TreeView/styles.scss
+++ b/src/app/components/TreeView/styles.scss
@@ -51,6 +51,7 @@ $tree-space-width: 28px;
 .cellContainer {
   display: flex;
   flex-direction: row;
+  width: 100%;
   align-items: center;
   overflow: hidden;
 }
